--- a/app/genfcst-parallel.yml
+++ b/app/genfcst-parallel.yml
@@ -1,23 +1,20 @@
 Command: 'Prevail8.exe'
-Directory: 'z:/'
-SettingLabel: 'AUTO'
-User: 'AUTO23'
+Directory: 'd:/Prevail8'
+User: 'NYC'
 Serial: true
 
 Roll up Detail Sales History:
-    Program: gDtlRollUp
+    Program: 'gDtlRollUp'
+    SettingLabel: 'WHSE_BOUND_BROOK'
 Generate Forecasts:
     Parallel: true
-    Generate Forecasts (Channel 23): 
+    Generate Forecasts (Channel 11): 
         Program: 'gMdlFcstx'
-        SettingLabel: 'AUTO_CHAN23'
+        SettingLabel: 'CHAN_11'
         ByPassFrontForm: '.T.'
-    Generate Forecasts (Channel 62): 
+    Generate Forecasts (Channel 12): 
         Program: 'gMdlFcstx'
-        SettingLabel: 'AUTO_CHAN62'
-    Generate Forecasts (Channel 88): 
+        SettingLabel: 'CHAN_12'
+    Generate Forecasts (Channel 13): 
         Program: 'gMdlFcstx'
-        SettingLabel: 'AUTO_CHAN88'
-    Generate Forecasts (Channel 97): 
-        Program: 'gMdlFcstx'
-        SettingLabel: 'AUTO_CHAN97'
+        SettingLabel: 'CHAN_13'
